examples/test/testpolicy17067.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17067
  namespace: namespace490
spec:
  podSelector:
    matchLabels:
      key43: value40
      key35: value44
      key34: value35
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key12: value13
          key7: value26
          key6: value26
